Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,7 @@ steps:
     flake8 .
   displayName: 'Run Flake8 lint'
 - script: |
+    pip install pytest
     pytest tests/
   displayName: 'Run unit tests'
 - script: |
