Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,9 @@ stages:
         displayName: 'Run Unit Tests'
         steps:
           - script: |
+              python -m pip install --upgrade pip
+              pip install -r requirements.txt
+              pip install --upgrade SQLAlchemy
               pytest tests/
 
       - job: CodeCoverage
