Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,7 @@ stages:
           displayName: 'Setup Python environment'
 
         - script: |
+            pip install flake8
             flake8
           displayName: 'Linting'
 
