Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,7 @@ stages:
           displayName: 'Linting'
 
         - script: |
+            pip install pytest
             pytest tests/
           displayName: 'Run Tests'
 
