--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,11 +63,20 @@ stages:
             PathtoPublish: '$(Build.ArtifactStagingDirectory)'
             ArtifactName: 'drop'
             publishLocation: 'Container'
+
         - task: Docker@2
-          displayName: 'Build and Push Docker Image'
+          displayName: 'Build Docker Image'
           inputs:
-            command: buildAndPush
+            command: 'build'
             containerRegistry: 'dock'  # Specify the name of your container registry connection
-            repository: 'flaskr-tdd'
-            Dockerfile: '**/Dockerfile'
+            repository: 'noortl/flaskr-tdd'
+            dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+            tags: '$(Build.BuildId)'
+
+        - task: Docker@2
+          displayName: 'Push Docker Image'
+          inputs:
+            command: 'push'
+            containerRegistry: 'dock'  # Specify the name of your container registry connection
+            repository: 'noortl/flaskr-tdd'
             tags: '$(Build.BuildId)'
